<resources>
    <string name="app_name">SqliteApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Ayarlar</string>
    <string name="action_category">Kategoriler</string>
    <string name="action_remove_notes">Tüm Notları Sil</string>
    <string name="action_remove_categories">Tüm Kategorileri Sil</string>
    <string name="action_create_note">Test Notları Oluştur</string>
    <string name="action_create_categories">Test Kategorileri Oluştur</string>

    <string-array name="categories">
        <item>Genel</item>
        <item>İş</item>
        <item>Okul</item>
        <item>Aile</item>
    </string-array>

    <string-array name="notes">
        <item>Markete Git</item>
        <item>İşe Git</item>
        <item>Okula Git</item>
        <item>Fatura Öde</item>
    </string-array>

</resources>
