<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_category"
        android:orderInCategory="100"
        android:title="@string/action_category"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all_notes"
        android:orderInCategory="102"
        android:title="@string/action_remove_notes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all_categories"
        android:orderInCategory="200"
        android:title="@string/action_remove_categories"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_create_test_note"
        android:orderInCategory="201"
        android:title="@string/action_create_note"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_create_test_category"
        android:orderInCategory="201"
        android:title="@string/action_create_categories"
        app:showAsAction="never"/>

</menu>